# src/main/java/com/thoughtworks/dps/restapirefimpl/entities/Comment.java
@@ -6,24 +6,24 @@ import java.util.UUID;
 
 public class Comment {
     private final String id;
-    private final String postId;
+    private final String articleId;
     private final String body;
     private final User author;
 
-    public Comment(String id, String postId, String body, User principal) {
+    public Comment(String id, String articleId, String body, User principal) {
 
         this.id = id;
-        this.postId = postId;
+        this.articleId = articleId;
         this.body = body;
         this.author = principal;
     }
 
-    public String getPostId() {
-        return postId;
+    public String getArticleId() {
+        return articleId;
     }
 
     public static Comment fromRequest(CommentRequest commentRequest) {
-        return new Comment(UUID.randomUUID().toString(), commentRequest.getPostId(), commentRequest.getBody(), null);
+        return new Comment(UUID.randomUUID().toString(), commentRequest.getArticleId(), commentRequest.getBody(), null);
     }
 
     public String getId() {
@@ -35,7 +35,7 @@ public class Comment {
     }
 
     public Comment withAuthor(User principal) {
-        return new Comment(id, postId, body, principal);
+        return new Comment(id, articleId, body, principal);
     }
 
     public User getAuthor() {
