# src/main/java/com/thoughtworks/dps/restapirefimpl/resources/ArticleRequest.java
@@ -2,15 +2,15 @@ package com.thoughtworks.dps.restapirefimpl.resources;
 
 import com.fasterxml.jackson.annotation.JsonProperty;
 
-public class PostRequest {
+public class ArticleRequest {
 
     private final String title;
     private final String body;
     private boolean draft;
 
-    public PostRequest(@JsonProperty("title") String title,
-                       @JsonProperty("body") String body,
-                       @JsonProperty("draft") boolean draft) {
+    public ArticleRequest(@JsonProperty("title") String title,
+                          @JsonProperty("body") String body,
+                          @JsonProperty("draft") boolean draft) {
 
         this.title = title;
         this.body = body;
